Data Quality and Schema Validation related test cases

--- a/test_data/Untitled.ipynb
+++ b/test_data/Untitled.ipynb
@@ -2,58 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "34880550",
+   "execution_count": 41,
+   "id": "abbc5834",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
-    "\n",
     "mysql_conn = create_engine(\"mysql+pymysql://root:Admin%40143@localhost:3308/edw_retail_reporting\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "a8fc7ea2",
+   "execution_count": 24,
+   "id": "8146637e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_actual = pd.read_sql(\"\"\"select * from stag_sales\"\"\",mysql_conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "35dfcbf8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_expected = pd.read_csv(\"sales_data.csv\")"
+    "df = pd.read_csv(\"sales_data.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8e9515e0",
+   "id": "a3281fe5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     False\n",
-       "1      True\n",
-       "2      True\n",
-       "3      True\n",
-       "4      True\n",
-       "      ...  \n",
-       "56     True\n",
-       "57     True\n",
-       "58     True\n",
-       "59     True\n",
-       "60     True\n",
-       "Name: sales_id, Length: 61, dtype: bool"
+       "False"
       ]
      },
      "execution_count": 19,
@@ -62,34 +40,130 @@
     }
    ],
    "source": [
-    "df_expected['sales_id'].isin(df_actual['sales_id'])"
+    "df.duplicated().any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "fe9be81d",
+   "execution_count": 26,
+   "id": "95288040",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['sales_id'].duplicated().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b62c0604",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['store_id'].isnull().values.any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "bd63e298",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().values.any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6d18bd7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().values.any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "c5dc1c75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# expected data - actual data\n",
-    "df_extra_in_expected = df_expected[~df_expected.apply(tuple,axis=1).isin(df_actual.apply(tuple,axis=1))]"
+    "foreign_df = pd.read_sql(\"\"\"select * from fact_sales\"\"\",mysql_conn)\n",
+    "primary_df = pd.read_sql(\"\"\"select * from stag_product\"\"\",mysql_conn)\n",
+    "df_not_matched = foreign_df[~foreign_df['product_id'].isin(primary_df['product_id'])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "0c592b4f",
+   "execution_count": 61,
+   "id": "04b52597",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_extra_in_expected.to_csv(\"extra_row_expected.csv\")"
+    "df_not_matched.empty"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c179a8bc",
+   "execution_count": 58,
+   "id": "5ab0bc20",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -97,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8235eb6c",
+   "id": "3ac931d1",
    "metadata": {},
    "outputs": [],
    "source": []
